Fixed responsive align pt.1

--- a/src/css/_utilities.margins.scss
+++ b/src/css/_utilities.margins.scss
@@ -4,3 +4,7 @@
 .u-mt2 { margin-top:   $space-2; }
 
 .u-mt3 { margin-top: $space-3; }
+
+@media screen and (max-width: $breakpoint-2) {
+  .u-mt2\@bp2 { margin-top: $space-2; }
+}
