--- a/src/css/_utilities.sizes.scss
+++ b/src/css/_utilities.sizes.scss
@@ -12,5 +12,6 @@
 }
 
 @media screen and (max-width: $breakpoint-2) {
+  .u-w2\@bp2 { width: $size-2; }
   .u-w100p\@bp2 { width: 100%; }
 }
